# Pokedex

./: .gitignore  .pre-commit-config.yaml  Pkemon_eda.ipynb  README.md  app.py  extensions.py  pokedex.db  pyproject.toml  server.py
.github/workflows/: bandit.yml  python-app.yml
app/: app.py
app/db/: models.py
app/rest/routes/: poke_routes.py
app/tests/unit/: test_root.py
db/: __init__.py  models.py  schemas.py
old/: plotly_101.py  tools.py
pokedex_data/: Pokemon_cleaned.csv  generate_db.py
tests/: conftest.py
utils/: plotly_101.py
